--- a/Lightning Datatable With Row Actions/LWCExampleController.cls
+++ b/Lightning Datatable With Row Actions/LWCExampleController.cls
@@ -2,6 +2,23 @@ public inherited sharing class LWCExampleController {
     
     @AuraEnabled(Cacheable = true)
     public static List<Contact> getContacts(){
-        return [SELECT Id, FirstName,LastName, Phone, Email FROM Contact limit 15];
+        return [SELECT Id, FirstName,LastName, Phone, Email FROM Contact ORDER BY Name limit 10];
+    }
+    
+    @AuraEnabled
+    public static void deleteContacts(list<Id> lstConIds){
+        try {
+            list<Contact> lstConsToDelete = new list<Contact>();
+            System.debug('lstConIds ====> '+lstConIds);
+            for(Id idCon : lstConIds) {
+                lstConsToDelete.add(new Contact(Id = idCon));
+            }
+            if(!lstConsToDelete.isEmpty()) {
+                delete lstConsToDelete;
+            }
+        }
+        catch(Exception ex) {
+            throw new AuraHandledException(ex.getMessage());
+        }
     }
 }
